--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "start": "npx http-server ./dist -c-1 -p 8001 -a localhost"
   },
   "dependencies": {
     "@nuxt/image": "1.11.0",
