--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxt/image": "1.11.0",
     "@pinia/nuxt": "^0.11.2",
+    "ipx": "^3.1.1",
     "nuxt": "^4.0.3",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
