--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxt/image": "1.11.0",
+    "@nuxtjs/sitemap": "^7.5.0",
     "@pinia/nuxt": "^0.11.2",
     "ipx": "^3.1.1",
     "nuxt": "^4.0.3",
